<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutUploadStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10.dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.UploadStoryFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_placeholder_upload"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_image" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5.dp"
                android:layout_weight="1"
                android:text="@string/btn_text_select_image" />

            <Button
                android:id="@+id/button_capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5.dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/tx_button_camera" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_desc_title"
            android:textSize="26.sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="13.dp"
            app:boxCornerRadiusBottomStart="13.dp"
            app:boxCornerRadiusTopEnd="13.dp"
            app:boxCornerRadiusTopStart="13.dp"
            app:errorEnabled="false">

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/hint_description"
                android:minLines="7"
                android:paddingHorizontal="13.dp"
                android:paddingVertical="10.dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_box_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_location_checkbox" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_upload"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:text="@string/btn_text_upload" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
